# rs-bindata

./: Cargo.toml  NOTICE  README.md
rs-bindata-impl/: Cargo.toml  NOTICE  README.md
rs-bindata-impl/src/: lib.rs
src/: lib.rs
tests/data/a/: georgie-porgie  i-am-a-little-teapot
